tests/snapshots/end_to_end__13_argv-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:

venice_main_0:
  pushq %rbp
  movq %rsp, %rbp
  subq $16, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx
  movq %rdi, -8(%rbp)
  movq $.s_0, %r12
  movq %r12, %rdi
  pushq %r10
  pushq %r11
  call venice_string_new
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %rdi
  pushq %r10
  pushq %r11
  call venice_print
  popq %r11
  popq %r10
  movq %rax, %r10
  movq -8(%rbp), %r12
  movq %r12, %rdi
  pushq %r10
  pushq %r11
  call venice_list_length
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %rdi
  pushq %r10
  pushq %r11
  call venice_printint
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $0, %r10
  movq %r10, -16(%rbp)
  jmp while_cond_1

while_cond_1:
  movq -16(%rbp), %r10
  movq -8(%rbp), %r12
  movq %r12, %rdi
  pushq %r10
  pushq %r11
  call venice_list_length
  popq %r11
  popq %r10
  movq %rax, %r11
  cmpq %r11, %r10
  jl while_2
  jmp while_end_3

while_2:
  movq $.s_1, %r15
  movq %r15, %rdi
  pushq %r10
  pushq %r11
  call venice_string_new
  popq %r11
  popq %r10
  movq %rax, %r14
  movq %r14, %rdi
  pushq %r10
  pushq %r11
  call venice_print
  popq %r11
  popq %r10
  movq %rax, %r13
  movq -8(%rbp), %r12
  movq %r12, %rdi
  movq -16(%rbp), %r13
  movq %r13, %rsi
  pushq %r10
  pushq %r11
  call venice_list_index
  popq %r11
  popq %r10
  movq %rax, %r11
  movq %r11, %rdi
  pushq %r10
  pushq %r11
  call venice_println
  popq %r11
  popq %r10
  movq %rax, %r10
  movq -16(%rbp), %r11
  movq $1, %r12
  movq %r12, %r10
  addq %r11, %r10
  movq %r10, -16(%rbp)
  jmp while_cond_1

while_end_3:
  movq $0, %r10
  movq %r10, %rax
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $16, %rsp
  popq %rbp
  retq

.s_0:
  .string "# of args: "
.s_1:
  .string "Arg: "

