tests/snapshots/end_to_end__14_file_io-x86.snap
---
source: tests/end_to_end.rs
expression: x86_output
---
.globl venice_main
venice_main:
  pushq %rbp
  movq %rsp, %rbp
  subq $80, %rsp
  pushq %r12
  pushq %r13
  pushq %r14
  pushq %r15
  pushq %rbx

venice_main_0:
  movq $.s_0, %r10
  movq %r10, -8(%rbp)
  pushq %r10
  pushq %r11
  movq -8(%rbp), %rdi
  subq $8, %rsp
  call venice_string_new
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -16(%rbp)
  pushq %r10
  pushq %r11
  movq -16(%rbp), %rdi
  subq $8, %rsp
  call venice_file_open
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -24(%rbp)
  movq -24(%rbp), %r10
  movq %r10, -32(%rbp)
  pushq %r10
  pushq %r11
  movq -32(%rbp), %rdi
  subq $8, %rsp
  call venice_file_read_all
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -40(%rbp)
  movq -24(%rbp), %r10
  movq %r10, -48(%rbp)
  pushq %r10
  pushq %r11
  movq -48(%rbp), %rdi
  subq $8, %rsp
  call venice_file_close
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $.s_1, %r10
  movq %r10, -56(%rbp)
  pushq %r10
  pushq %r11
  movq -56(%rbp), %rdi
  subq $8, %rsp
  call venice_string_new
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -64(%rbp)
  pushq %r10
  pushq %r11
  movq -64(%rbp), %rdi
  subq $8, %rsp
  call venice_print
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq -40(%rbp), %r10
  movq %r10, -72(%rbp)
  pushq %r10
  pushq %r11
  movq -72(%rbp), %rdi
  subq $8, %rsp
  call venice_string_length
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq %r10, -80(%rbp)
  pushq %r10
  pushq %r11
  movq -80(%rbp), %rdi
  subq $8, %rsp
  call venice_printint
  addq $8, %rsp
  popq %r11
  popq %r10
  movq %rax, %r10
  movq $0, %r10
  movq %r10, %rax
  jmp venice_main_return_1

venice_main_return_1:
  popq %rbx
  popq %r15
  popq %r14
  popq %r13
  popq %r12
  addq $80, %rsp
  popq %rbp
  retq

.s_0:
  .string "tests/resources/lorem.txt"
.s_1:
  .string "File size: "

