tests/snapshots/end_to_end__16_tricky_function_calls-vil.snap
---
source: tests/end_to_end.rs
expression: vil_output
---
extern venice_string_new;
extern venice_print;
extern venice_printint;



func add__0 {
  // stack_frame_size = 16

add__0_0:
  R0 = load -8  // x__1
  R1 = move R0
  R0 = load -16  // y__2
  R1 = add R1, R0
  R13 = move R1
  jump add__0_return_1

add__0_return_1:
}

func venice_main {
  // stack_frame_size = 56

venice_main_2:
  R0 = set s_0
  store R0, -8
  R0 = call venice_string_new, mem[-8]
  store R0, -16
  R0 = call venice_print, mem[-16]
  R0 = set 20
  store R0, -24
  R0 = set 5
  store R0, -32
  R0 = set 17
  store R0, -40
  R0 = call add__0, mem[-32], mem[-40]
  store R0, -48
  R0 = call add__0, mem[-24], mem[-48]
  store R0, -56
  R0 = call venice_printint, mem[-56]
  R0 = set 0
  R13 = move R0
  jump venice_main_return_3

venice_main_return_3:
}


data s_0 = "Should be 42: ";

